UPDATE: JS functional

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -32,7 +32,7 @@ textarea{
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  height: 60px;
   border-top: 1px solid white;;
 }
 
@@ -57,10 +57,14 @@ textarea{
   color: white;
 }
 
+.btn {
+  max-width: 50px;
+}
+
 .saveBtn {
   border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  /* border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px; */
   background-color: #06AED5;
   color: white;
 }
@@ -72,11 +76,15 @@ textarea{
 
 span {
   height: 40px;
-  width: 70px;
+  width: 100px;
 }
 
 .form-control {
   height: 40px;
+
 }
 
-
+#currentDay {
+  margin-top: 35px;
+  font-size: 40px;
+}
